5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1573_1330.log
== SUBMITION (2019-03-13 14:36:20) 
-- CODE:
print(41,6)
-- EXECUTION TIME:
0.189991
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:38:03) 
-- CODE:
print(round (41,6))
-- EXECUTION TIME:
0.192772
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:38:05) 
-- CODE:
print(round (41,6))
-- EXECUTION TIME:
0.154762
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:38:13) 
-- CODE:
round (41,6)
-- EXECUTION TIME:
0.170241
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:38:34) 
-- CODE:
round (41,6)
print (41,6)
-- EXECUTION TIME:
0.202144
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:45:43) 
-- CODE:
round (41,7)
-- EXECUTION TIME:
0.172376
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:45:55) 
-- CODE:
print (41,7)
-- EXECUTION TIME:
0.141727
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:16:35) 
-- CODE:
read A=250
read B=6
read C=0
C=A/B
print (round(C,2))
-- EXECUTION TIME:
0.141139
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    read A=250
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:16:58) 
-- CODE:
read A=250
read B=6
read C=0
C=A/B
print (round(C,2))
-- EXECUTION TIME:
0.13595
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    read A=250
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:17:43) 
-- CODE:
A=250
B=6
C=0
C=A/B
print(round(C,2))
-- EXECUTION TIME:
0.130958
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
